[gd_scene load_steps=20 format=3 uid="uid://cgsttyrjnqxsk"]

[ext_resource type="Script" path="res://scripts/Playlist.gd" id="1_dai6i"]
[ext_resource type="Script" path="res://scripts/Audio.gd" id="2_3gwim"]
[ext_resource type="Texture2D" uid="uid://dhhe6n0n12ewg" path="res://icons/pause.svg" id="3_tvish"]
[ext_resource type="Theme" uid="uid://b0yxsyv4escld" path="res://themes/theme.tres" id="5_hmdir"]
[ext_resource type="Script" path="res://scripts/Header.gd" id="5_trvgb"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="6_4rj0i"]
[ext_resource type="Texture2D" uid="uid://dxgnntuufier0" path="res://icons/vertical_align_top.svg" id="6_hph5m"]
[ext_resource type="Texture2D" uid="uid://0shfrgsrvjvs" path="res://icons/menu.svg" id="7_pvjaw"]
[ext_resource type="Script" path="res://scripts/TagManager.gd" id="8_51xrq"]
[ext_resource type="Texture2D" uid="uid://dqqo8ub1s28ci" path="res://icons/folder.svg" id="8_u3vle"]
[ext_resource type="Texture2D" uid="uid://goawdt8p4xfe" path="res://icons/close.svg" id="8_ukf4s"]
[ext_resource type="Script" path="res://scripts/SelectedChannel.gd" id="9_82vpe"]
[ext_resource type="Texture2D" uid="uid://dh03fbwpd2vkp" path="res://icons/queue_music.svg" id="10_1f6b5"]
[ext_resource type="Texture2D" uid="uid://bd5b0gbc2mfrx" path="res://icons/remove.svg" id="11_kmim0"]
[ext_resource type="Texture2D" uid="uid://c1b02xgd4f2mp" path="res://icons/skip_next.svg" id="12_2head"]
[ext_resource type="Script" path="res://scripts/ChannelName.gd" id="13_1hnu3"]
[ext_resource type="Script" path="res://scripts/DisplayTime.gd" id="13_1826s"]
[ext_resource type="Script" path="res://scripts/TextEditor.gd" id="14_c7elu"]
[ext_resource type="Script" path="res://scripts/CodeEditor.gd" id="15_y3u5x"]

[node name="Playlist" type="Node"]
script = ExtResource("1_dai6i")

[node name="Audio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
script = ExtResource("2_3gwim")

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(711, 159)
exclusive = false
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
use_native_dialog = true

[node name="UI" type="Control" parent="." node_paths=PackedStringArray("removeNextSong", "nextSongLabel")]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_hmdir")
script = ExtResource("6_4rj0i")
removeNextSong = NodePath("Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong/MarginContainer/VBoxContainer/HBoxContainer/Queued")
nextSongLabel = NodePath("Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong/MarginContainer/VBoxContainer/HBoxContainer/NextSongLabel")

[node name="Margins" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Margins"]
layout_mode = 2

[node name="HSplitContainer" type="HBoxContainer" parent="UI/Margins/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Mixer Container" type="PanelContainer" parent="UI/Margins/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Mixer Margins" type="MarginContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="PanelContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 1
theme = ExtResource("5_hmdir")
theme_type_variation = &"AccentBox"
script = ExtResource("5_trvgb")

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header/MarginContainer"]
layout_mode = 2

[node name="Return to Root" type="Button" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
icon = ExtResource("6_hph5m")
flat = true
icon_alignment = 1

[node name="CurrentDirectoryLabel" type="Label" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Root Directory"

[node name="OpenInspector" type="Button" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
mouse_filter = 1
icon = ExtResource("7_pvjaw")
flat = true

[node name="Mixer" type="VBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TagsContainer" type="PanelContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
theme_type_variation = &"AccentBlue"
script = ExtResource("8_51xrq")

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/TagsContainer"]
layout_mode = 2
theme_type_variation = &"AccentBlue"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/TagsContainer/MarginContainer"]
layout_mode = 2

[node name="ExpandButton" type="MarginContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/TagsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="ExpandButton" type="Button" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/TagsContainer/MarginContainer/HBoxContainer/ExpandButton"]
layout_mode = 2
mouse_filter = 1
toggle_mode = true
icon = ExtResource("8_u3vle")
flat = true
icon_alignment = 1

[node name="Label" type="Label" parent="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/TagsContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Tags"

[node name="InspectorContainer" type="PanelContainer" parent="UI/Margins/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Inspector Margins" type="MarginContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="PanelContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AccentBox"

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Header"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Header/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inspector"

[node name="Close Inspector" type="Button" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
icon = ExtResource("8_ukf4s")
flat = true

[node name="SelectedChannel" type="PanelContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Channel"
script = ExtResource("9_82vpe")

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddToQueue" type="Button" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("10_1f6b5")
flat = true
icon_alignment = 1

[node name="Label" type="Label" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "0db"

[node name="ChannelName" type="TextEdit" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Select a Song"
editable = false
wrap_mode = 1
scroll_fit_content_height = true
script = ExtResource("13_1hnu3")

[node name="VolumeSlider" type="HSlider" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "Channel Volume"
min_value = -100.0
max_value = 6.0
step = 0.01

[node name="GridContainer" type="GridContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="AlbumLabel" type="RichTextLabel" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/GridContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Album:"
fit_content = true
autowrap_mode = 0

[node name="AlbumName" type="TextEdit" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Album"
scroll_fit_content_height = true
script = ExtResource("14_c7elu")

[node name="ArtistLabel" type="RichTextLabel" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/GridContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Artist:"
fit_content = true
autowrap_mode = 0

[node name="ArtistName" type="TextEdit" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Artist"
scroll_fit_content_height = true
script = ExtResource("14_c7elu")

[node name="TagsLabel" type="Label" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Tags:"

[node name="TagEnter" type="TextEdit" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Tag"
editable = false
scroll_fit_content_height = true
script = ExtResource("15_y3u5x")

[node name="Tags" type="VBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Queue Display" type="PanelContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Channel"

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display"]
layout_mode = 2

[node name="QueueList" type="VBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="NextSong" type="PanelContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ChannelGroup"

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong/MarginContainer"]
layout_mode = 2

[node name="UpNext" type="Label" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Up Next:"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Queued" type="MarginContainer" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="RemoveRemoveNextFromQueue" type="Button" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong/MarginContainer/VBoxContainer/HBoxContainer/Queued"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 1
icon = ExtResource("11_kmim0")
flat = true
icon_alignment = 1

[node name="NextSongLabel" type="RichTextLabel" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
bbcode_enabled = true
text = "[i]Song Name[/i]"
fit_content = true

[node name="QueueSeperator" type="HSeparator" parent="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Transport" type="PanelContainer" parent="UI/Margins/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
focus_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/VBoxContainer/Transport"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Margins/VBoxContainer/Transport/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label Margin" type="MarginContainer" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Label Margin"]
layout_mode = 2

[node name="Play_Pause" type="Button" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Label Margin/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("3_tvish")
flat = true
icon_alignment = 1

[node name="SkipButton" type="Button" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Label Margin/HBoxContainer"]
layout_mode = 2
icon = ExtResource("12_2head")
flat = true
icon_alignment = 1

[node name="SongPlaying" type="Label" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Label Margin/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
focus_mode = 2
text = "Song Title"

[node name="Timeline Margin" type="MarginContainer" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="Timeline" type="HBoxContainer" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Timeline Margin"]
layout_mode = 2

[node name="TimeElapsed" type="Label" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Timeline Margin/Timeline"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
script = ExtResource("13_1826s")

[node name="MarginContainer" type="MarginContainer" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Timeline Margin/Timeline"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="Timeline" type="HSlider" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Timeline Margin/Timeline/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
scrollable = false

[node name="TimeRemaining" type="Label" parent="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Timeline Margin/Timeline"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
script = ExtResource("13_1826s")

[connection signal="finished" from="Audio" to="." method="_on_audio_finished"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="focus_entered" from="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header" to="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header" method="_on_focus_entered"]
[connection signal="mouse_entered" from="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header" to="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header" to="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header" method="_on_mouse_exited"]
[connection signal="pressed" from="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header/MarginContainer/HBoxContainer/Return to Root" to="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header" method="_on_return_to_root_pressed"]
[connection signal="pressed" from="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/Header/MarginContainer/HBoxContainer/OpenInspector" to="UI" method="_on_open_inspector_pressed"]
[connection signal="toggled" from="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/TagsContainer/MarginContainer/HBoxContainer/ExpandButton/ExpandButton" to="UI/Margins/VBoxContainer/HSplitContainer/Mixer Container/Mixer Margins/ScrollContainer/VBoxContainer/TagsContainer" method="_on_expand_button_toggled"]
[connection signal="pressed" from="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Header/MarginContainer/HBoxContainer/Close Inspector" to="UI" method="_on_close_inspector_pressed"]
[connection signal="pressed" from="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/HBoxContainer/AddToQueue" to="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel" method="_on_add_to_queue_pressed"]
[connection signal="text_changed" from="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/HBoxContainer/ChannelName" to="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel" method="_on_channel_name_text_changed"]
[connection signal="value_changed" from="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/VolumeSlider" to="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel" method="_on_volume_slider_value_changed"]
[connection signal="text_changed" from="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/GridContainer/AlbumName" to="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel" method="_on_album_name_text_changed"]
[connection signal="text_changed" from="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel/MarginContainer/VBoxContainer/GridContainer/ArtistName" to="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel" method="_on_artist_name_text_changed"]
[connection signal="mouse_entered" from="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong" to="UI" method="_on_next_song_mouse_entered"]
[connection signal="mouse_exited" from="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong" to="UI" method="_on_next_song_mouse_exited"]
[connection signal="pressed" from="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/Queue Display/MarginContainer/QueueList/NextSong/MarginContainer/VBoxContainer/HBoxContainer/Queued/RemoveRemoveNextFromQueue" to="." method="RemoveFromQueue" binds= [0]]
[connection signal="focus_entered" from="UI/Margins/VBoxContainer/Transport" to="UI/Margins/VBoxContainer/HSplitContainer/InspectorContainer/Inspector Margins/ScrollContainer/VBoxContainer/SelectedChannel" method="_on_transport_focus_entered"]
[connection signal="toggled" from="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Label Margin/HBoxContainer/Play_Pause" to="." method="_on_play_pause_toggled"]
[connection signal="pressed" from="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Label Margin/HBoxContainer/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="drag_ended" from="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Timeline Margin/Timeline/MarginContainer/Timeline" to="." method="_on_timeline_drag_ended"]
[connection signal="drag_started" from="UI/Margins/VBoxContainer/Transport/MarginContainer/VBoxContainer/Timeline Margin/Timeline/MarginContainer/Timeline" to="." method="_on_timeline_drag_started"]
